# pm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pm.yaml
cmake/: version.cmake
example/: CMakeLists.txt  main.c
src/: plugin.h  pm.c  pm.h  version.h
